# exelcis-backend-ppy-001

./: .gitignore  README.md  db.json  pyproject.toml
api/: .env-example
api/api/: settings.py
api/departamentos/: admin.py  models.py
